added css to table in docs

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,32 @@
 body {
-    background-color: aliceblue;
+    background-color: greenyellow;
 }
 
-table, th, td {
-    border-style: solid 5px;
-}
+table {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;
+    border: 3px solid black;
+  }
+
+  thead th:nth-child(1) {
+    width: 30%;
+  }
+
+  thead th:nth-child(2) {
+    width: 20%;
+  }
+
+  thead th:nth-child(3) {
+    width: 15%;
+  }
+
+  thead th:nth-child(4) {
+    width: 35%;
+  }
+
+  th,
+  td {
+    padding: 20px;
+    border: solid black;
+  }
